destinationrules/auth-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-service-dr
  namespace: microservices
spec:
  host: auth-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
